src/_global.scss
@import "fonts";

* {
  font-family: Montserrat-Regular, sans-serif;
  box-sizing: border-box;
  padding: 0;
  margin: 0;

  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

::before,
::after {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  border: 0;
}

body {
  height: 100%;
  line-height: 1;
}

#root {
  height: calc(100vh - 1px);
  overflow: hidden;
}

ul,
ol,
li {
  list-style: none;
}

button {
  display: block;
}

$blue: #61dafb;
$blue-dark: #282c34;
$blue-semi-dark: #383c44;

$shadow-basic: inset 1px 1px 5px 1px $blue, 4px 4px 15px 5px $blue-dark;
$radius-small: 5px;

$mobile-initial-width: 720px;

.page-center-block {
  max-width: 1200px;
  width: 100%;
  margin: 0 auto;
}

